# ant

./: .clang-format  .clangd  .gdbinit  .gitignore  .natvis  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ant_printers.py  codecov.yml  xmake.lua
tests/compile/: CMakeLists.txt  xmake.lua
tests/compile/ant.test.compile/: dummy.compile.fail.cpp  dummy.compile.pass.cpp
tests/compile/ant.test.compile/core/: index_assign_copy_with_different_index_type.fail.cpp  index_assign_move_with_different_index_type.fail.cpp  index_compare_with_different_index_type.fail.cpp  index_convert_mismatch_tag.fail.cpp  index_ctor_copy_with_different_index_type.fail.cpp  index_move_copy_with_different_index_type.fail.cpp  type_info.compile.pass.cpp  type_list.compile.pass.cpp
tests/compile/ant.test.compile/database/: entity_layout_missing_integral_type.compile.fail.cpp  env_get_optional.compile.fail.cpp  env_try_get_required.compile.fail.cpp
tests/compile/ant.test.compile/database/detail/: changeset_supported_attach.compile.pass.cpp  changeset_supported_create.compile.pass.cpp  changeset_supported_destroy.compile.pass.cpp  changeset_supported_detach.compile.pass.cpp  changeset_unsupported_attach.compile.fail.cpp  changeset_unsupported_destroy.compile.fail.cpp  changeset_unsupported_detach.compile.fail.cpp  component_vtable_of_with_throw_copy.compile.pass.cpp  component_vtable_of_with_throw_dtor.compile.fail.cpp  component_vtable_of_with_throw_move.compile.fail.cpp
tests/compile/ant.test.compile/entity/: entity_layout.compile.pass.cpp  entity_layout_missing_integral_type.compile.fail.cpp
tests/compile/src/: do_compile.cpp  do_compile_fail.cpp
tests/compile/src/changeset/: changeset.cpp  changeset_unsupported_attach.cpp  changeset_unsupported_attach_type.cpp  changeset_unsupported_create.cpp  changeset_unsupported_destroy.cpp  changeset_unsupported_detach.cpp  changeset_unsupported_detach_type.cpp  changeset_unsupported_set_env.cpp  changeset_unsupported_set_env_type.cpp  changeset_unsupported_unset_env.cpp  changeset_unsupported_unset_env_type.cpp
tests/compile/src/core/: hash.compile.pass.cpp  type_list.cpp  type_list_index_of_not_found.compile.fail.cpp
tests/compile/src/database/changeset/: changeset_supported_detach.compile.pass.cpp  changeset_unsupported_attach.compile.fail.cpp  changeset_unsupported_attach_type.compile.fail.cpp  changeset_unsupported_create.compile.fail.cpp  changeset_unsupported_detach.compile.fail.cpp  changeset_unsupported_detach_type.compile.fail.cpp
tests/compile/src/database/detail/: component_vtable_of_with_throw_copy.compile.pass.cpp  component_vtable_of_with_throw_dtor.compile.fail.cpp  component_vtable_of_with_throw_move.compile.fail.cpp
tests/compile/src/database/env/: env_get.cpp  env_get_optional_unsupported_access.cpp  env_get_optional_unsupported_optional.cpp  env_get_optional_unsupported_type.cpp  env_get_unsupported_access.cpp  env_get_unsupported_required.cpp  env_get_unsupported_type.cpp  env_has.cpp  env_has_unsupported_required.cpp  env_has_unsupported_type.cpp  env_supported_get.compile.pass.cpp  env_supported_try_get.compile.pass.cpp  env_unsupported_get.compile.fail.cpp  env_unsupported_get_type.compile.fail.cpp  env_unsupported_try_get.compile.fail.cpp  env_unsupported_try_get_type.compile.fail.cpp
tests/compile/src/database/query/: query_row_supported_const_get.compile.pass.cpp  query_row_supported_const_has.compile.pass.cpp  query_row_supported_const_try_get.compile.pass.cpp  query_row_supported_get.compile.pass.cpp  query_row_supported_has.compile.pass.cpp  query_row_supported_try_get.compile.pass.cpp  query_row_unsupported_const_get.compile.fail.cpp  query_row_unsupported_const_has.compile.fail.cpp  query_row_unsupported_const_try_get.compile.fail.cpp  query_row_unsupported_get.compile.fail.cpp  query_row_unsupported_has.compile.fail.cpp  query_row_unsupported_try_get.compile.fail.cpp
tests/compile/src/detail/env/: env_signature_traits.cpp  env_signature_traits_duplicate_type.cpp
tests/compile/src/env/: env_get.cpp  env_get_optional_unsupported_access.cpp  env_get_optional_unsupported_optional.cpp  env_get_optional_unsupported_type.cpp  env_get_unsupported_access.cpp  env_get_unsupported_required.cpp  env_get_unsupported_type.cpp  env_has.cpp  env_has_unsupported_required.cpp
tests/compile/src/query/: query_row_get.cpp  query_row_get_optional_unsupported_access.cpp  query_row_get_optional_unsupported_optional.cpp  query_row_get_optional_unsupported_type.cpp  query_row_get_unsupported_access.cpp  query_row_get_unsupported_required.cpp  query_row_get_unsupported_type.cpp  query_row_has.cpp  query_row_has_unsupported_type.cpp
tests/mock/: CMakeLists.txt
tests/mock/include/ant.mock/: component.hpp  equivalent.hpp
tests/mock/src/: component.cpp
tests/unit/: CMakeLists.txt  xmake.lua
tests/unit/ant.test.unit/: main.cpp  true.unit.cpp  version.unit.cpp
tests/unit/ant.test.unit/core/: assert.unit.cpp  bit.unit.cpp  bitset.unit.cpp  dynamic_bitset.unit.cpp  hash.unit.cpp  index.unit.cpp  type_info.unit.cpp
tests/unit/ant.test.unit/database/: changeset.unit.cpp  column.unit.cpp  entity_index.unit.cpp  entity_registry.unit.cpp  entity_traits.unit.cpp  env.unit.cpp  query.unit.cpp  schema.unit.cpp  schema_builder.unit.cpp  table.unit.cpp  table_signature.unit.cpp
tests/unit/ant.test.unit/entity/: entity_traits.unit.cpp
tests/unit/include/ant.unit/: assert_error.hpp  doctest.hpp  generator.hpp
tests/unit/src/: changeset_tests.cpp  env_tests.cpp  main.cpp  query_tests.cpp  version.unit.cpp
tests/unit/src/core/: assert.unit.cpp  assert_error.cpp  bit.unit.cpp  bitset_tests.cpp  dynamic_bitset.unit.cpp  hash.unit.cpp  type_info.unit.cpp
tests/unit/src/database/: changeset.unit.cpp  component.cpp  component.hpp  env.unit.cpp  env_tests.cpp  query.unit.cpp  schema.hpp  schema.unit.cpp  schema_builder.unit.cpp  schema_tests.cpp  table.hpp
tests/unit/src/detail/: bitset_tests.cpp  dynamic_bitset_tests.cpp  schema_tests.cpp
(+299 files in other folders)
